// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`string algo tests shoud correct 1 letter 1`] = `
Array [
  Array [
    "l",
  ],
]
`;

exports[`string algo tests shoud correct empty string 1`] = `
Array [
  Array [
    "",
  ],
]
`;
